--- a/localization/english/romaioi_countries_l_english.yml
+++ b/localization/english/romaioi_countries_l_english.yml
@@ -153,6 +153,8 @@
  dyn_c_HRE_adj: "Holy Roman"
  dyn_c_united_principalities: "United Principalities"
  dyn_c_united_principalities_adj: "Vlachian"
+ dyn_byz_republic: "Hellenic Republic"
+ dyn_byz_republic: "Hellenic"
 
  #Decentralized nations
  SML: "Seminole"
