--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -60,6 +60,10 @@ rising_sun:0 "Rising Sun"
 horde_mod:0 "Horde"
 defensive_tech_mod:0 "Defensive Bonus"
 
+#Companies
+ company_SuezCompany: "Klysma Etairía"
+ company_byz_ric: "Romaíon Emporikí Etaireía"
+
 #State Regions
 
 #region_aegypt:0 "Aegypt"
@@ -181,8 +185,8 @@ pm_default_building_house_wisedom:0 "House Of Wisedom"
 automatic_irrigation_building_spices_plantation:0 "Automatic Irrigation"
 default_building_spices_plantation:0 "Basic Production"
 
- decree_romanisation: "Romanization."
- decree_romanisation_desc: "Begin efforts to "Romanize" this province."
+decree_romanisation: "Romanization."
+decree_romanisation_desc: "Begin efforts to "Romanize" this province."
 
 #Modifiers
 modifier_building_output_spices_add:0 "@spices! Spices output per level"
