--- a/localization/english/FX_subject_fight_00_l_english.yml
+++ b/localization/english/FX_subject_fight_00_l_english.yml
@@ -1,10 +1,10 @@
 ﻿l_english:
- FX_ask_subject_to_fight: "Command Subjects To Fight"
- FX_ask_subject_to_fight_action_name: "Command Subjects To Fight"
- FX_ask_subject_to_fight_desc: "Command Subjects To Fight"
- subject_fight_for_lord: "Command Subjects To Fight"
- FX_subject_fight.1.t: "Command Subjects To Fight"
- FX_subject_fight.1.d: "Select which subject to fight"
+ FX_ask_subject_to_fight: "Command a Subject to Attack this Nation"
+ FX_ask_subject_to_fight_action_name: "Subject Attack"
+ FX_ask_subject_to_fight_desc: "Command a Subject to Attack this Nation"
+ subject_fight_for_lord: "Command Subjects to Attack"
+ FX_subject_fight.1.t: "Select which Subject will Attack the Target"
+ FX_subject_fight.1.d: "Select which subject will Attack the Target"
  FX_subject_fight.1.f: "Select the diplomatic play"
  subject_initiator1: "[SCOPE.sCountry('subject_initiator1').GetName]"
  subject_initiator2: "[SCOPE.sCountry('subject_initiator2').GetName]"
