--- a/localization/english/romaioi_cultures_l_english.yml
+++ b/localization/english/romaioi_cultures_l_english.yml
@@ -1,38 +1,39 @@
 ﻿l_english:
 #Romaioi Mod Cultures
 #New 
- cappadocian:0 "Kappadokikí"
- anatolian:0 "Anatolikós" #formerly Anatolikós
- pontic:0 "Pontíoi"
- african:0 "Afrikanós"
- aegyptian:0 "Aegýptian"
- apoikoi:0 "Apoikoi"
- syriac:0 "Syriac"
- coptic:0 "Coptic"
-# sicilian:0 "Sicilian"
- varangian:0 "Varangian"
- andalusian:0 "Andalusian"
- elysian:0 "Elysian"
- vinlander:0 "Vinlander"
- latinoi:0 "Latínoi"
- mughal:0 "Mughal"
- formosan:0 "Formosan"
+ cappadocian: "Kappadokikí"
+ anatolian: "Anatolikós" #formerly Anatolikós
+ pontic: "Pontíoi"
+ african: "Afrikanós"
+ aegyptian: "Aegýptian"
+ apoikoi: "Apoikoi"
+ syriac: "Syriac"
+ coptic: "Coptic"
+# sicilian: "Sicilian"
+ varangian: "Varangian"
+ andalusian: "Andalusian"
+ elysian: "Elysian"
+ vinlander: "Vinlander"
+ latinoi: "Latínoi"
+ mughal: "Mughal"
+ formosan: "Formosan"
+ taino: "Taino"
 
  #Colonial Cultures todo come up with unique names.
- colonial_french:0 "Colonial French"
- colonial_italian:0 "Colonial Italian"
- colonial_german:0 "Colonial German"
- colonial_dutch:0 "Colonial Dutch"
- colonial_british:0 "New Anglander"
- colonial_andalusian:0 "New Grenadian"
- colonial_japanese:0 "Colonial Japanese"
- colonial_chinese:0 "Colonial Chinese"
+ colonial_french: "Colonial French"
+ colonial_italian: "Colonial Italian"
+ colonial_german: "Colonial German"
+ colonial_dutch: "Colonial Dutch"
+ colonial_british: "New Anglander"
+ colonial_andalusian: "New Grenadian"
+ colonial_japanese: "Colonial Japanese"
+ colonial_chinese: "Colonial Chinese"
 
 #Renamed Currently all renamed cultures do not work unless they are renamed in cultures_1
  #greek:1 "Romaíoi" 
- #romanian:0 "Vlach"
- #sudanese:0 "Nubian"
- #albanian:0 "Illyrian"
- #maghrebi:0 "Maghrebi"
- #misri:0 "Egyptian"
- #mashriqi:0 "Levantine"
+ #romanian: "Vlach"
+ #sudanese: "Nubian"
+ #albanian: "Illyrian"
+ #maghrebi: "Maghrebi"
+ #misri: "Egyptian"
+ #mashriqi: "Levantine"
