--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -816,7 +816,7 @@
  HUB_NAME_STATE_KAZAN_mine:0 "Arzamas"
  HUB_NAME_STATE_KAZAN_farm:0 "Nizhny Novgorod"
  HUB_NAME_STATE_KAZAN_wood:1 "Vyatka"
- HUB_NAME_STATE_TARTARIA_city:0 "Saratov"
+ HUB_NAME_STATE_TARTARIA_city:0 "Sarai"
  HUB_NAME_STATE_TARTARIA_mine:0 "Penza"
  HUB_NAME_STATE_TARTARIA_farm:0 "Tambov"
  HUB_NAME_STATE_TARTARIA_wood:0 "Saransk"
