--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -25,7 +25,8 @@ ig_kurultai: "Kurultai"
 ig_great_khan_restorationists: "Great Khan Restorationists"
 ig_steppe_nomads: "Steppe Nomads"
 ig_constitutionalists: "Constitutionalists"
-
+ig_sedentarists: "Sedentarists"
+ig_modernists: "Modernists"
 ig_latin_priviledges: "Upset over unfair Latin tax exemptions"
 
 #ideology
@@ -56,14 +57,14 @@ ideology_polish_patriotism: "Liberal Patriotism"
 ideology_enlightened_despotism: "Enlightened Despotism"
 ideology_polish_patriotism_desc: "This group's loyal to the state and it's institution, however they don't wish for state to encroach into their private lives and bussineses."
 ideology_enlightened_despotism_desc: "This group views state and it's leader as a wise figure, that ought to be benevolent to it's people while also pragmatic when the time's require it."
-ideology_mongol_jingoist:
-ideology_mongol_jingoist_desc:
-ideology_irredentist:
-ideology_irredentist_desc:
-ideology_semi_nomadic:
-ideology_semi_nomadic_desc:
-ideology_basqaq:
-ideology_basqaq_desc:
+ideology_mongol_jingoist: "Mongol Jingoist"
+ideology_mongol_jingoist_desc: "Mongol Jingoist"
+ideology_irredentist: "Irredentist"
+ideology_irredentist_desc: "Irredentist"
+ideology_semi_nomadic: "Semi Nomadic"
+ideology_semi_nomadic_desc: "Semi Nomadic"
+ideology_basqaq: "Basqag"
+ideology_basqaq_desc: "Basqag"
 
 
 #tech
