--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -32,10 +32,23 @@ ig_latin_priviledges: "Upset over unfair Latin tax exemptions"
 #ideology
 ideology_romaioi_patriarch: "The Ecumenical Patriarchate"
 ideology_romaioi_patriarch_desc: "#lore The Ecumenical Patriarch of Konstantinopolis"
+ideology_tagmata: "Tagmata"
+ideology_tagmata_desc: "Tagmata are the elite military units of the Basileía Romaíon. They are organized into regiments, each with its own specialized role and equipment. The most prominent and powerful Tagmata are the Scholai, the Excubitors, and the Vigla. The Scholai are the imperial guard, responsible for protecting the Basileus and his family. The Excubitors are a heavy infantry unit, while the Vigla are a cavalry unit. The tagmata are typically composed of professional soldiers, and are considered the most elite and well-trained troops in the army. They are also among the best-paid soldiers in the empire."
+ideology_romaioi_loyalist: "Loyalist"
+ideology_romaioi_loyalist_desc: "Stratiótikoi are loyal to the Basileus above all else."
+ideology_romaioi_isolationist: "Rural Agenda"
+ideology_romaioi_isolationist_desc: ""
+ideology_romaioi_agrarian: "Agrarian"
+ideology_romaioi_agrarian_desc: ""
+ideology_romaioi_paternalistic: "SPQR"
+ideology_romaioi_paternalistic_desc: "#lore Heirs to the Senatorial legacy of our ancestors, only those of noble Patrikíos (Patrician) birth should have a voice in the Synkletos (Senate)."
 ideology_romaioi_hegemony: "Romaíoi Hegemony"
-ideology_romaioi_hegemony_desc: "#lore This group believes Romaíoi culture should be spread to all corners of the Basileía Romaíon"
+ideology_romaioi_hegemony_desc: "#lore For millennia, both our Roman and Greek ancestors guided the light of civilization! Ever since the fall of the West, barbarians have ruled over much of Europe, and even though some of them may share our faith, they must be shown true civilization, at any cost."
+
 ideology_romaioi_meritocratic: "Meritocratic"
 ideology_romaioi_meritocratic_desc: "#lore This group believes success is earned and that those who have achieved it deserve the accompanying responsibility and wealth.#!"
+
+
 ideology_frontier_expansionist: "Frontier Expansionist"
 ideology_frontier_expansionist_desc: "Believes in expanding the frontier and exploiting it's people and resources"
 
@@ -191,6 +204,8 @@ city_worlds_desire_state: "City of Worlds Desire"
 great_city_state: "Magnificent City"
 merchant_state: "Grand Port"
 roman_senate: "Synkletos"
+romaioi_corrupt_pronoia: "Thematic deterioration"
+romaioi_reformed_pronoia: "Pronoia"
 
 liberum_veto: "Liberum Veto"
 piotrkow_statutes: "Piotrkow Statutes"
