feat: add initial CHI flavor text

--- a/localization/english/replace/country_flavor_text_l_english.yml
+++ b/localization/english/replace/country_flavor_text_l_english.yml
@@ -1,5 +1,4 @@
 ﻿l_english:
- #CHI_FLAVOR_TEXT:1 ""
  #FRA_FLAVOR_TEXT:0 ""
  JAP_FLAVOR_TEXT:0 "The strength of the ruling Tokugawa shogunate is failing, with famine and unrest spreading all across the country. The Edo period has lasted in Japan for over 200 years, will it be able to last for 200 more?"
  #PER_FLAVOR_TEXT:0 ""
@@ -102,6 +101,9 @@
  GENERIC_FLAVOR_TEXT:0 "The industrial era is a time of great change; cultural, economic, scientific, social and more. As these changes accelerate, one can only wonder what the future will entail."
  REV_GENERIC_FLAVOR_TEXT:1 "Dissatisfied with the direction that the so-called organized government was taking, these revolutionaries have decided to take up arms to overthrow it. Will they succeed in seizing power or will they be crushed like so many forgotten revolutions of the past?"
  DECENTRALIZED_FLAVOR_TEXT:0 "Encroached upon by more organized powers, this country struggles to maintain their autonomy. Will they see the dawn of a new century, or will their name survive only in history books?"
+
+ # East Asia
+ CHI_FLAVOR_TEXT:1 "After years of malgovernance under the Yuan dynasty, the Han Chinese has finally revolted against their Mongol overlords. As the world is rapidly industrializing, can the new Ming dynasty adapt to the new era?"
 
  # Nonsense Countries
 
