feat: add initial JAP flavor text

--- a/localization/english/replace/country_flavor_text_l_english.yml
+++ b/localization/english/replace/country_flavor_text_l_english.yml
@@ -1,6 +1,5 @@
 ﻿l_english:
  #FRA_FLAVOR_TEXT:0 ""
- JAP_FLAVOR_TEXT:0 "The strength of the ruling Tokugawa shogunate is failing, with famine and unrest spreading all across the country. The Edo period has lasted in Japan for over 200 years, will it be able to last for 200 more?"
  #PER_FLAVOR_TEXT:0 ""
  #NET_FLAVOR_TEXT:0 ""
  #SAR_FLAVOR_TEXT:0 ""
@@ -104,6 +103,7 @@
 
  # East Asia
  CHI_FLAVOR_TEXT:1 "After years of malgovernance under the Yuan dynasty, the Han Chinese has finally revolted against their Mongol overlords. As the world is rapidly industrializing, can the new Ming dynasty adapt to the new era?"
+ JAP_FLAVOR_TEXT:0 "With colonies established across the Pacific Ocean, the Shogunate seems poised for a dominant position in the far East."
 
  # Nonsense Countries
 
