refactor: CHI: convert tech to modifiers
Makes it easier for players to be aware of the
modifiers affecting CHI, although it is not
possible to remove these modifiers just yet.

--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -103,7 +103,6 @@ merchant_republic_mod2: "Merchant Republic"
 rising_sun: "Rising Sun"
 horde_mod: "Horde"
 defensive_tech_mod: "Defensive Bonus"
-china_mod: "Middle Kingdom"
 new_world_tribal: "New World Tribalism"
 
 #Companies
@@ -199,6 +198,9 @@ fur_income: "Fur Trade Income"
  modifier_magnate_oligarchy: "Magnate Oligarchy"
  modifier_slave_to_liberty: "Slave To Liberty"
 # diplomatic_plays_blocked_until_golden_liberty: "#BOLD Diplomatic plays blocked#! until #BOLD Golden Liberty#! Journal Entry is resolved"
+china_insufficient_infrastructure: "Insufficient infrastructure"
+china_rampant_corruption: "Rampant corruption"
+china_political_turmoil: "Political turmoil"
 
 city_worlds_desire_state: "City of Worlds Desire"
 great_city_state: "Magnificent City"
