--- a/localization/english/romaioi_events_l_english.yml
+++ b/localization/english/romaioi_events_l_english.yml
@@ -49,6 +49,11 @@ greek_revolt.1.f: "Naval forces made up from a large Latin coalition led by Veni
 greek_revolt.1.a: "Crush the interlopers and restore Order at once!"
 greek_revolt.1.b: "Recognize their occupation for now."
 
+romaion_emp_rally.1.t: "Basileus Rallies Public Support"
+romaion_emp_rally.1.d: "The Basileus has used his popularity to rally Konstantinople and influential regional leaders."
+romaion_emp_rally.1.f: "The Basileus has used his popularity to rally Konstantinople and influential regional leaders to bolster support for the current war effort."
+romaion_emp_rally.1.a: "For the Basileus!"
+
 frankish_revolt.1.t: "Frankish Lords Revolt"
 frankish_revolt.1.d: "Frankish nobles have agitated the frankish countryside into open rebellion."
 frankish_revolt.1.f: "Frankish nobles have agitated the frankish countryside into open rebellion."
