refactor: `norse`: convert tech to modifiers
Makes it easier for players to be aware of the
modifiers affecting `norse` countries, similar to
commit 0632c2cde0fb0c0afc5ac9121e1361961f6987b9.

--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -92,7 +92,6 @@ andalus_mod: "Andalusian"
 #arab_mod: "Abbasid Caliphate"
 # mali_gold: "Large Gold Mines"
 silk_road: "Silk Road"
-norse_mod: "Norse"
 elysium: "Elysium"
 new_world_colonial: "New World Colonial"
 africa_colonial: "Africa Colonial"
@@ -201,6 +200,9 @@ fur_income: "Fur Trade Income"
 china_insufficient_infrastructure: "Insufficient infrastructure"
 china_rampant_corruption: "Rampant corruption"
 china_political_turmoil: "Political turmoil"
+norse_naval_tradition: "Naval tradition"
+norse_competitive_traders: "Competitive traders"
+norse_military_doctrine: "Defensive military doctrine"
 
 city_worlds_desire_state: "City of Worlds Desire"
 great_city_state: "Magnificent City"
