refactor: `JAP` : convert tech to modifiers
Makes it easier for players to be aware of the
modifiers affecting `JAP`, similar to commit
63f5b019d1b90f219a68a84621fec014cb2c0643.

--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -99,7 +99,6 @@ sunset_invasion: "Sunset Invasion"
 italian_republic_mod: "Italian Republic"
 merchant_republic_mod: "Merchant Republic"
 merchant_republic_mod2: "Merchant Republic"
-rising_sun: "Rising Sun"
 horde_mod: "Horde"
 defensive_tech_mod: "Defensive Bonus"
 new_world_tribal: "New World Tribalism"
@@ -203,6 +202,10 @@ china_political_turmoil: "Political turmoil"
 norse_naval_tradition: "Naval tradition"
 norse_competitive_traders: "Competitive traders"
 norse_military_doctrine: "Defensive military doctrine"
+japan_shogunate: "Shogunate"
+japan_military_tradition: "Military tradition"
+japan_pacific_trade: "Pacific trade"
+japan_corporate_reforms: "Corporate reforms"
 
 city_worlds_desire_state: "City of Worlds Desire"
 great_city_state: "Magnificent City"
