--- a/localization/english/character/romaioi_character_traits_l_english.yml
+++ b/localization/english/character/romaioi_character_traits_l_english.yml
@@ -7,5 +7,5 @@
  bulgar_slayer_desc: "Leader of the brutal retribution against the Great Bulgarian Rebellion."
  exarchate_trait: "Exarchate"
  exarchate_trait_desc: "Exarchate"
- corrupt_offical_trait: "Corrupt Offical"
+ corrupt_offical_trait: "Corrupt Official"
  corrupt_offical_trait_desc: "Corruption runs rampant in all levels of government, many entrenched elites benefit from their status."
