--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -2,7 +2,7 @@
 #Romaioi Basileía Romaíon
 
 #Interest Groups
-ig_orthodox_patriarch: "Klirikoí" #Eikoumenikó Patriarcheío
+ig_orthodox_patriarch: "Klirikoí" #Eikoumenikó Patriarcheío Oikoumenikón Patriarkhión
 ig_orthodox_patriarch_desc: "The Ecumenical Patriarchate of Konstantinopolis"
 ig_themata_patricians: "Dynatói" #Patricians Thémata Patrikíous
 ig_themata_patricians_desc: "The Dynatói was a legal term in the Basileía Romaíon, denoting the senior levels of civil, military and ecclesiastic (including monastic) officialdom, who usually, but not always, also commanded considerable fortunes and landed estates. Although such positions were not intended to be hereditary, by the late 10th and early 11th centuries they had started to become monopolized by a limited number of families who by the mid-11th century formed a hereditary aristocracy." #Patricians Thémata Patrikíous
@@ -196,16 +196,16 @@ fur_income: "Fur Trade Income"
  modifier_magnate_oligarchy: "Magnate Oligarchy"
  modifier_slave_to_liberty: "Slave To Liberty"
 # diplomatic_plays_blocked_until_golden_liberty: "#BOLD Diplomatic plays blocked#! until #BOLD Golden Liberty#! Journal Entry is resolved"
-china_insufficient_infrastructure: "Insufficient infrastructure"
-china_rampant_corruption: "Rampant corruption"
-china_political_turmoil: "Political turmoil"
-norse_naval_tradition: "Naval tradition"
-norse_competitive_traders: "Competitive traders"
-norse_military_doctrine: "Defensive military doctrine"
+china_insufficient_infrastructure: "Insufficient Infrastructure"
+china_rampant_corruption: "Rampant Corruption"
+china_political_turmoil: "Peasant Resistance"
+norse_naval_tradition: "Naval Tradition"
+norse_competitive_traders: "Competitive Traders"
+norse_military_doctrine: "Norse Military Doctrine"
 japan_shogunate: "Shogunate"
-japan_military_tradition: "Military tradition"
-japan_pacific_trade: "Pacific trade"
-japan_corporate_reforms: "Corporate reforms"
+japan_military_tradition: "Military Tradition"
+japan_pacific_trade: "Pacific Trade"
+japan_corporate_reforms: "Corporate Reforms"
 
 city_worlds_desire_state: "City of Worlds Desire"
 great_city_state: "Magnificent City"
