--- a/localization/english/addons/zz_wallachia_events_l_english..yml
+++ b/localization/english/addons/zz_wallachia_events_l_english..yml
@@ -18,6 +18,6 @@
  wallachia_events.7.a:0 "Traiasca Vlachia Mare!"
  wallachia_events.7.f:0 "“There is beauty and power in unity. We must be united in heart and mind. One country, one people.”"
  
- personal_union_effect_desc_global:0 "Becomes a Personal Union"
- personal_union_effect_desc_first:0 "[TARGET_COUNTRY.GetName] becomes a [COUNTRY.GetAdjectiveNoFlag] Personal Union"
- personal_union_effect_desc_third:0 "[AddTextIf(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self),TARGET_COUNTRY.GetNameNoFlag)][AddTextIf(Not(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self)),TARGET_COUNTRY.GetName)] is now in a Personal Union under [COUNTRY.GetName]"
+ #personal_union_effect_desc_global:0 "Becomes a Personal Union"
+ #personal_union_effect_desc_first:0 "[TARGET_COUNTRY.GetName] becomes a [COUNTRY.GetAdjectiveNoFlag] Personal Union"
+ #personal_union_effect_desc_third:0 "[AddTextIf(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self),TARGET_COUNTRY.GetNameNoFlag)][AddTextIf(Not(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self)),TARGET_COUNTRY.GetName)] is now in a Personal Union under [COUNTRY.GetName]"
