--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -275,6 +275,50 @@ modifier_building_output_spices_add: "@spices! Spices output per level"
 modifier_building_output_spices_add_desc: "The amount of @spices! Spices produced by buildings"
 modifier_building_group_bg_spices_plantations_throughput_add: "$building_spices_plantation$ [concept_throughput]"
 modifier_building_group_bg_spices_plantations_throughput_add_desc: "A bonus or penalty to both input and output of $building_spices_plantation$"
+modifier_goods_output_spices_add: "@spice!$spice$ output"
+modifier_goods_output_spices_add_desc: "The amount of @spice!$spice$ produced by buildings"
+modifier_goods_input_spices_add: "@spice!$spice$ input"
+modifier_goods_input_spices_add_desc: "The amount of @spice!$spice$ consumed by buildings"
+modifier_goods_output_spices_mult: "Building @spice!$spice$ output"
+modifier_goods_output_spices_mult_desc: "A bonus or penalty to the amount of @spice!$spice$ produced by buildings"
+modifier_goods_input_spices_mult: "@spice!$spice$ input"
+modifier_goods_input_spices_mult_desc: "A bonus or penalty to the amount of @spice!$spice$ consumed"
+
+
+horse: "Horse"
+
+modifier_goods_output_horse_add: "@horse!$horse$ output"
+modifier_goods_output_horse_add_desc: "The amount of @horse!$horse$ produced by buildings"
+modifier_goods_input_horse_add: "@horse!$horse$ input"
+modifier_goods_input_horse_add_desc: "The amount of @horse!$horse$ consumed by buildings"
+modifier_goods_output_horse_mult: "Building @horse!$horse$ output"
+modifier_goods_output_horse_mult_desc: "A bonus or penalty to the amount of @horse!$horse$ produced by buildings"
+modifier_goods_input_horse_mult: "@horse!$horse$ input"
+modifier_goods_input_horse_mult_desc: "A bonus or penalty to the amount of @horse!$horse$ consumed"
+
+
+
+pmg_horse_ranch: "Horse Ranch"
+pm_horse_ranch: "Horse Ranch"
+pm_increased_horse_ranch: "Large-scale Horse Ranch"
+
+pm_horse_drawn_train: "Horse Drawn Train"
+
+pm_no_equipment: "$pm_no_steam_automation$"
+pm_horse_drawn: "Horse Drawn"
+
+pm_horse_drawn_transport: "Horse Drawn Transport"
+
+pm_public_hackney_carriage: "Public Hackney Carriage"
+pm_public_hackney_carriage_haap: "$pm_public_hackney_carriage$"
+
+pm_horse_transport: "Horse Drawn Transport"
+pm_no_street_transport: "Manpower Street Transport"
+
+track: "Track"
+track_desc: "The wagonway is considered the prototype and predecessor of railways, and almost all mines built in the 16th and 17th centuries used wagonway mining cars as the only mode of transportation."
+
+
 
 #Wars
 
@@ -316,14 +360,14 @@ RYU: "Ryukyu Kingdom"
 RYU_ADJ: "Ryukyun"
 
 #Political Parties
-party_komma_ethnikofronon: "Kómma Ethnikofronon"
+party_komma_ethnikofronon: "Kómma Ethnikofronon" #conservative
 party_komma_paleologos: "Kómma Paleologós"
 party_komma_fileleftheron: "Kómma Fileleftheron"
 party_neoteristikon_komma: "Neoteristikon Kómma"
 party_kommounistiko_komma_byzantos: "Kommounistikó Kómma Romaíon"
 party_sosialistiko_komma_byzantos: "Sosialistikó Kómma Romaíon"
 party_komma_ton_eleutherofrovon: "Kómma ton Eleutherofróvon"
-agrotiko_ktinotrofiko_komma: "Agrotikó Ktinotrofikó Kómma"
+party_agrotiko_ktinotrofiko_komma: "Kómma Eléftheron Agrotón" #"Agrotikó Ktinotrofikó Kómma" #agrarian 
 
 #Game Rules
 
