fix: move localization keys to replace dir
This commit solves the error:

```
[pdx_localize.cpp:194]: Duplicate localization key.
Key 'MNG' is defined in both
'localization/english/countries_l_english.yml' and
'localization/english/romaioi_countries_l_english.yml'.
```

Solved by moving the keys to the appropriate
`replace` directory, so now keys are no longer
duplicated.

--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -180,6 +180,8 @@
  TUG_ADJ: "Imazighen"
  CNW: "Jiazhou"
  CNW_ADJ: "Jiazhou"
+ MNG: "Mirning"
+ MNG_ADJ: "Mirning"
  
   # Dynamic countries
  dyn_c_sicily: "Sicily"
