fix: fix duplicate localization key
This commit solves the following error:

```
[pdx_localize.cpp:194]: Duplicate localization key.
Key 'slavic' is defined in both
'localization/english/content_1_l_english.yml' and
'localization/english/romaioi_religion_l_english.yml'.
```

This was solved by renaming the key `slavic` to
`br_religion_slavic` to avoid the conflict.

--- a/localization/english/romaioi_religion_l_english.yml
+++ b/localization/english/romaioi_religion_l_english.yml
@@ -16,7 +16,7 @@
  confucian: "Confucian"
  taoist: "Taoist"
  shenist: "Shenist"
- slavic: "Slavic"
+ br_religion_slavic: "Slavic"
  baltic: "Baltic"
 
  #Discrimination
