refactor: rename religion variables
This is to avoid name conflicts with vanilla
variables.

This commit does the following renaming:

* baltic to br_religion_baltic
* shenist to br_religion_shenist
* taoist to br_religion_taoist
* confucian to br_religion_confucian
* tengri to br_religion_tengri
* mesoamerican to br_religion_mesoamerican
* nahuatl to br_religion_nahuatl
* inti to br_religion_inti
* totemism to br_religion_totemism
* zoroastrian to br_religion_zoroastrian
* norse to br_religion_norse
* hellenic to br_religion_hellenic
* bogomilist to br_religion_bogomilist
* iconoclast to br_religion_iconoclast
* nestorian to br_religion_nestorian
* krstjani to br_religion_krstjani
* apostolic to br_religion_apostolic

--- a/localization/english/romaioi_religion_l_english.yml
+++ b/localization/english/romaioi_religion_l_english.yml
@@ -1,23 +1,23 @@
 ﻿l_english:
  #Religons
- apostolic: "Apostolic"
- krstjani: "Krstjani"
- nestorian: "Nestorian"
- iconoclast: "Iconoclast"
- bogomilist: "Bogomilist"
- hellenic: "Hellenic"
- norse: "Norse"
- zoroastrian: "Zoroastrian"
- totemism: "Totemism"
- inti: "Inti"
- nahuatl: "Nahuatl"
- mesoamerican: "Mesoamerican"
- tengri: "Tengri"
- confucian: "Confucian"
- taoist: "Taoist"
- shenist: "Shenist"
+ br_religion_apostolic: "Apostolic"
+ br_religion_krstjani: "Krstjani"
+ br_religion_nestorian: "Nestorian"
+ br_religion_iconoclast: "Iconoclast"
+ br_religion_bogomilist: "Bogomilist"
+ br_religion_hellenic: "Hellenic"
+ br_religion_norse: "Norse"
+ br_religion_zoroastrian: "Zoroastrian"
+ br_religion_totemism: "Totemism"
+ br_religion_inti: "Inti"
+ br_religion_nahuatl: "Nahuatl"
+ br_religion_mesoamerican: "Mesoamerican"
+ br_religion_tengri: "Tengri"
+ br_religion_confucian: "Confucian"
+ br_religion_taoist: "Taoist"
+ br_religion_shenist: "Shenist"
  br_religion_slavic: "Slavic"
- baltic: "Baltic"
+ br_religion_baltic: "Baltic"
 
  #Discrimination
  new_world_pagan: "New World Pagan"
