fix: replace persian tech with modifiers
This commit solves the following error:

```
[techtreepanel.cpp:161]: Trying to add a tech
(persia_mod) to a category that does not exist in
the UI
```

This was solved by creating two modifiers for the
technology, but only one of them was given to the
`Mughals` as their primary culture is not
`Persian`.

--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -87,7 +87,6 @@ roman_roads: "Romaíon Infrastructure"
 #caliph: "Caliph"
 #pope: "Pope"
 tribal: "Tribal"
-persia_mod: "Persian"
 andalus_mod: "Andalusian"
 #arab_mod: "Abbasid Caliphate"
 # mali_gold: "Large Gold Mines"
@@ -205,6 +204,8 @@ japan_shogunate: "Shogunate"
 japan_military_tradition: "Military Tradition"
 japan_pacific_trade: "Pacific Trade"
 japan_corporate_reforms: "Corporate Reforms"
+br_persia_persian_cultural_promotion: "Persian Cultural Promotion"
+br_persia_defensive_military_posture: "Defensive Military Posture"
 
 city_worlds_desire_state: "City of Worlds Desire"
 great_city_state: "Magnificent City"
