--- a/localization/english/romaioi_misc_l_english.yml
+++ b/localization/english/romaioi_misc_l_english.yml
@@ -198,11 +198,11 @@ china_insufficient_infrastructure: "Insufficient Infrastructure"
 china_rampant_corruption: "Rampant Corruption"
 china_political_turmoil: "Peasant Resistance"
 norse_naval_tradition: "Naval Tradition"
-norse_competitive_traders: "Competitive Traders"
+norse_competitive_traders: "Northern Trade Dominance "
 norse_military_doctrine: "Norse Military Doctrine"
 japan_shogunate: "Shogunate"
-japan_military_tradition: "Military Tradition"
-japan_pacific_trade: "Pacific Trade"
+japan_military_tradition: "Samurai Tradition"
+japan_pacific_trade: "Pacific Trade Dominance"
 japan_corporate_reforms: "Corporate Reforms"
 br_persia_persian_cultural_promotion: "Persian Cultural Promotion"
 br_persia_defensive_military_posture: "Defensive Military Posture"
