--- a/localization/english/br_names_l_english.yml
+++ b/localization/english/br_names_l_english.yml
@@ -1,62 +1,63 @@
 ﻿l_english:
   #Noble Names
- Palaiologos:0 "Palaiologos"
- Komnenos:0 "Komnenos"
- Kantakouzenos:0 "Kantakouzenos"
- Doukas:0 "Doukas"
- Skleros:0 "Skleros"
- Phokas:0 "Phokas"
- Kastriotis:0 "Kastriotis"
- Diogenes:0 "Diogenes"
- Laskaris:0 "Laskaris"
- Bagrationi:0 "Bagrationi"
- Justinios:0 "Justinios"
- Kamytzes:0 "Kamytzes"
- Kourkouas:0 "Kourkouas"
- Galantius:0 "Galantinus"
- Akropolites:0 "Akropolites"
- Dalassenos:0 "Dalassenos"
- Bourtzes:0 "Bourtzes"
- Kuropalates:0 "Kuropalates"
+ Palaiologos: "Palaiologos"
+ Komnenos: "Komnenos"
+ Kantakouzenos: "Kantakouzenos"
+ Doukas: "Doukas"
+ Skleros: "Skleros"
+ Phokas: "Phokas"
+ Kastriotis: "Kastriotis"
+ Diogenes: "Diogenes"
+ Laskaris: "Laskaris"
+ Bagrationi: "Bagrationi"
+ Justinios: "Justinios"
+ Kamytzes: "Kamytzes"
+ Kourkouas: "Kourkouas"
+ Galantius: "Galantinus"
+ Akropolites: "Akropolites"
+ Dalassenos: "Dalassenos"
+ Bourtzes: "Bourtzes"
+ Kuropalates: "Kuropalates"
 
- Umayyad:0 "Umayyad"
- Abbasid:0 "Abbasid"
- Seljukids:0 "Seljukid"
- Rurkid:0 "Rurkid"
- Genghisid:0 "Genghisid"
- Jagiellon:0 "Jagiellon"
- Carolingion:0 "Carolingion"
- Ming:0 "Ming"
- Jayawardhana:0 "Jayawardhana"
- Medici:0 "Medici"
- Sforza:0 "Sforza"
- d_Este:0 "d'Este"
- Sigurdsson:0 "Sigurdsson"
- Godwinson:0 "Godwinson"
+ Umayyad: "Umayyad"
+ Abbasid: "Abbasid"
+ Seljukids: "Seljukid"
+ Rurkid: "Rurkid"
+ Genghisid: "Genghisid"
+ Jagiellon: "Jagiellon"
+ Carolingion: "Carolingion"
+ Ming: "Ming"
+ Jayawardhana: "Jayawardhana"
+ Medici: "Medici"
+ Sforza: "Sforza"
+ d_Este: "d'Este"
+ Sigurdsson: "Sigurdsson"
+ Godwinson: "Godwinson"
+ Ottonian: "Liudolfing"
 
  #First Names
- Belisarios:0 "Belisarios"
- Ioannes:0 "Ioannes"
- Bartholomaios:0 "Bartholomaios"
- Andronikos:0 "Andronikos"
- Heraclides:0 "Heraclides"
- Nikephoros:0 "Nikephoros"
- Konstantinios:0 "Konstantinios"
- Bastian:0 "Bastian"
- #Aurelian:0 "Aurelian"
- Aurelius:0 "Aurelius"
- Tiberios:0 "Tiberios"
- Bardas:0 "Bardas"
- Lekapenos:0 "Lekapenos"
- Maurianos:0 "Maurianos"
- Abubakari:0 "Abubakari"
+ Belisarios: "Belisarios"
+ Ioannes: "Ioannes"
+ Bartholomaios: "Bartholomaios"
+ Andronikos: "Andronikos"
+ Heraclides: "Heraclides"
+ Nikephoros: "Nikephoros"
+ Konstantinios: "Konstantinios"
+ Bastian: "Bastian"
+ #Aurelian: "Aurelian"
+ Aurelius: "Aurelius"
+ Tiberios: "Tiberios"
+ Bardas: "Bardas"
+ Lekapenos: "Lekapenos"
+ Maurianos: "Maurianos"
+ Abubakari: "Abubakari"
  
  
- #Alp_Arslan:0 "Alp Arslan"
- Tughril:0 "Tughril"
- Vladislaus:0 "Vladislaus"
- Kertarajasa:0 "Kertarajasa"
- Babur:0 "Babur"
+ #Alp_Arslan: "Alp Arslan"
+ Tughril: "Tughril"
+ Vladislaus: "Vladislaus"
+ Kertarajasa: "Kertarajasa"
+ Babur: "Babur"
 
 #Quechua
 
