--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -137,86 +137,6 @@ state_trait_cold_water_port: "Cold Water Port"
 state_trait_spice_islands: "Spice Islands"
 state_trait_canada_forest: "Forests of the Great North"
 
-#Modifiers
-latin_privileges: "Latin Trade Privileges"
-anti_latin_policies: "Anti Latin Trade Policies"
-romaioi_culture_supremacy: "Romaíon Cultural Supremacy"
-romaioi_bureaucratic_corruption: "Institutional Corruption"
-romaioi_ig_very_angry: "Influential Senators Angry"
-romaioi_ig_angry: "Influential Senators Protest"
-romaioi_ig_very_happy: "Influential Senators Pleased"
-romaioi_ig_happy: "Influential Senators Pleased"
-romaioi_tagmata_primacy: "Tagmata Primacy"
-romaioi_themata_primacy: "Themata Primacy"
-romaioi_varangian_primacy: "Varangian Primacy"
-romaioi_colonial_subsidies: "Colonial Subsidies"
-colonial_ferver: "Colonial Ferver"
-religious_chaos: "Religious Chaos"
-romaioi_jihad: "Jihad Called"
-decentralized_khanate: "Decentralized Khanate"
-merchant_republic: "Merchant State"
-arab_caliphate: "Abbasid Caliphate"
-romaioi_pentarchy: "Ecumenical Patriarch"
-pope: "Patriarch of Rome"
-patriarch_alexandria: "Patriarch Alexandria"
-patriarch_jerusalem: "Patriarch Jerusalem"
-patriarch_antioch: "Patriarch Antioch"
-holy_roman_empire: "Imperator Romanorum"
-noble_privileges: "Noble Privileges"
-eastern_roman_empire: "Basileus Romaíon"
-mandate_of_heaven: "Mandate of Heaven"
-vive_la_revolution: "Vive la Révolution"
-nomad_heritage: "Nomadic Heritage"
-ig_influence_modifier: "BR Influence Modifier"
-spice_income: "Spice Trade"
-eet_spice_dividends: "EET dividend income"
-hajj: "Hajj"
-holy_warriors: "Holy Warriors"
-tribal_warriors: "Tribal Warriors"
-boyars: "Boyars"
-cossacks: "Cossacks"
-tithe: "Papal Tithe"
-persian_empire: "Shah of Shahs"
-persian_satraps: "Satrapies"
-mongol_religious_tolerance: "Religious Tolerance"
-defensive_mod: "Defensive Preparations"
-war_for_china: "War For China"
-inward_perfection: "Inward Perfection"
-righteous_cause: "Righteous Cause"
-subservient_patriarch: "Subservient Patriarch"
-triumph_of_a_general: "Triumph of a General"
-organized_tribal_resistance: "Organized Native Resistance"
-fur_income: "Fur Trade Income"
- modifier_golden_liberty: "Golden Liberty"
- modifier_eastern_slavery: "Eastern Slavery"
- modifier_eastern_oppression: "Eastern Oppression"
- modifier_noble_democracy: "Noble Democracy"
- modifier_magnate_oligarchy: "Magnate Oligarchy"
- modifier_slave_to_liberty: "Slave To Liberty"
-# diplomatic_plays_blocked_until_golden_liberty: "#BOLD Diplomatic plays blocked#! until #BOLD Golden Liberty#! Journal Entry is resolved"
-china_insufficient_infrastructure: "Insufficient Infrastructure"
-china_rampant_corruption: "Rampant Corruption"
-china_political_turmoil: "Peasant Resistance"
-norse_naval_tradition: "Naval Tradition"
-norse_competitive_traders: "Northern Trade Dominance "
-norse_military_doctrine: "Norse Military Doctrine"
-japan_shogunate: "Shogunate"
-japan_military_tradition: "Samurai Tradition"
-japan_pacific_trade: "Pacific Trade Dominance"
-japan_corporate_reforms: "Corporate Reforms"
-br_persia_persian_cultural_promotion: "Persian Cultural Promotion"
-br_persia_defensive_military_posture: "Defensive Military Posture"
-
-city_worlds_desire_state: "City of Worlds Desire"
-great_city_state: "Magnificent City"
-merchant_state: "Grand Port"
-roman_senate: "Synkletos"
-romaioi_corrupt_pronoia: "Thematic deterioration"
-romaioi_reformed_pronoia: "Pronoia"
-
-liberum_veto: "Liberum Veto"
-piotrkow_statutes: "Piotrkow Statutes"
-
 #Buildings
 building_spices_plantation: "Spice Plantation"
 building_great_palace: "Méga Palátion"
@@ -351,9 +271,6 @@ ig_chonin: "Chōnin"
 ig_rangakusha: "Rangaku-sha"
 ig_daimyo: "Daimyo"
 ig_craftsmen: "Craftsmen"
- 
-edo_class_system: "Edo Social Class System"
-edo_society_ig: "Edo Society"
 
 RYU: "Ryukyu Kingdom"
 RYU_ADJ: "Ryukyun"
@@ -393,16 +310,10 @@ law_tribal_armies: "Tribal Society"
 law_tribal_armies_desc: "A militaristic tribal society is a type of social organization characterized by a strong emphasis on military power and warfare. In such societies, warfare often plays a central role in both culture and economy."
 
 
- dyn_c_re:0 "Roman Empire"
- dyn_c_ere:0 "Eastern Roman Empire"
- dyn_c_re_adj:0 "Roman"
+ dyn_c_re: "Roman Empire"
+ dyn_c_ere: "Eastern Roman Empire"
+ dyn_c_re_adj: "Roman"
  
- ere_re_name_decision:0 "Latinize Name: Roman Empire"
- ere_re_name_decision_desc:0 "Latinize our name to 'Roman Empire'"
- ere_re_name_decision_custom_tooltip:0 "We should use our Latin name 'Roman Empire'."
- ere_ere_name_decision:0 "Latinize Name: Eastern Roman Empire"
- ere_ere_name_decision_desc:0 "Latinize our name to 'Eastern Roman Empire'"
- ere_ere_name_decision_custom_tooltip:0 "We should use our full Latin name 'Eastern Roman Empire'."
- 
- ere_re_name_tt:0 "Name of our country will be changed to 'Roman Empire'"
- ere_ere_name_tt:0 "Name of our country will be changed to 'Eastern Roman Empire'"
+ ere_re_name_tt: "Name of our country will be changed to 'Roman Empire'"
+ ere_ere_name_tt: "Name of our country will be changed to 'Eastern Roman Empire'"
+
