fix: conform to `YAML` standard
This commit removes the `:0` which is not a valid
`YAML` syntax.

--- a/localization/english/replace/inventions_l_english.yml
+++ b/localization/english/replace/inventions_l_english.yml
@@ -66,5 +66,5 @@
   #silver_standard: "Silver Standard"
   #vertical_filing_cabinet: "Vertical Filing Cabinet"
   #vertical_filing_cabinet_desc: "Gone but not forgotten"
-napoleonic_warfare:0 "Mobile Artillery"
-napoleonic_warfare_desc:0 "Warfare emphasizing the importance of properly utilizing artillery."
+napoleonic_warfare: "Mobile Artillery"
+napoleonic_warfare_desc: "Warfare emphasizing the importance of properly utilizing artillery."
