fix: add missing `"`

--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -1316,7 +1316,7 @@
  HUB_NAME_STATE_PALESTINE_mine: "Hebron"
  HUB_NAME_STATE_PALESTINE_farm: "Ascalon"
  HUB_NAME_STATE_PALESTINE_wood: "Tyros"
- HUB_NAME_STATE_TRANSJORDAN_city: "Gadara
+ HUB_NAME_STATE_TRANSJORDAN_city: "Gadara"
  HUB_NAME_STATE_TRANSJORDAN_port: "Aila"
  HUB_NAME_STATE_TRANSJORDAN_mine: "Ma'an"
  HUB_NAME_STATE_TRANSJORDAN_farm: "Petra"
