fix: conform to `YAML` standard
This commit deletes `:0`, `:1`, etc from
`countries_l_english.yml`.

--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -118,7 +118,7 @@
  SAR_ADJ: "Savoyod"
  SIC: "Katepaníkion Italías"
  SIC_ADJ: "Italías"
- TRI:1 "Tripolitania"
+ TRI: "Tripolitania"
  TRI_ADJ: "Tripolitanian"
  TRS: "Transylvania"
  TRS_ADJ: "Transylvanian"
