fix: conform to `YAML` standard
This commit deletes `:0`, `:1`, etc from
`misc_l_english.yml`

--- a/localization/english/replace/misc_l_english.yml
+++ b/localization/english/replace/misc_l_english.yml
@@ -19,5 +19,5 @@
   pm_no_tugs_building_canals: "No Tugs"
   pm_tugging_building_canals: "Tugboat Fleet"
 
- building_statue_of_liberty:0 "Statue of Elysium"
- building_white_house:0 "Senate Building"
+ building_statue_of_liberty: "Statue of Elysium"
+ building_white_house: "Senate Building"
