--- a/localization/english/replace/cultures_l_english.yml
+++ b/localization/english/replace/cultures_l_english.yml
@@ -1,306 +1,306 @@
 ﻿l_english:
- german_culture_group:0 "German"
- baltic_german:0 "Baltic"
- bavarian:0 "Bavarian"
- austrian:0 "Saxon"
- saxon:0 "Saxon"
- ashkenazi:0 "Ashkenazi"
- beneluxian_culture_group:0 "Low Countries"
- dutch:0 "Dutch"
- frankish:0 "Frankish"
- wallonian:0 "Wallonian"
- boer:0 "Boer"
- swiss_culture_group:0 "Swiss"
- swiss:0 "Swiss"
- scandinavian_culture_group:0 "Scandinavian"
- swedish:0 "Swedish"
- danish:0 "Dane"
- norwegian:0 "Norwegian"
- icelandic:0 "Icelandic"
- finnish:0 "Finnish"
- sami:0 "Sámi"
- british_culture_group:0 "British"
- british:0 "Anglo-Saxon"
- irish:0 "Irish"
- welsh:0 "Welsh"
- scottish:0 "Scottish"
- australian:0 "Australian"
- anglo_canadian:0 "Anglo-Canadian"
- italian_culture_group:0 "Italian"
- north_italian:0 "North Italian"
- south_italian:0 "South Italian"
- maltese:0 "Maltese"
- iberian_culture_group:0 "Iberian"
- basque:0 "Basque"
- spanish:0 "Spanish"
- catalan:0 "Catalan"
- portuguese:0 "Portuguese"
- galician:0 "Galician"
- french_culture_group:0 "French"
- french:0 "French"
- french_canadian:0 "French Canadian"
- breton:0 "Breton"
- south_slavic_culture_group:0 "South Slavic"
- croat:0 "Croatian"
- serb:0 "Serbian"
- bulgarian:0 "Boulgaroí"
- albanian:0 "Albanoí" #Arvanoi Albanoi Boulgaroí
- slovene:0 "Slovene"
- bosniak:0 "Bosniak"
- romanian_culture_group:0 "Romanian"
- romanian:0 "Vlach"
- hungarian_culture_group:0 "Hungarian"
- hungarian:0 "Hungarian"
- polish_culture_group:0 "Polish"
- polish:0 "Polish"
- lithuanian:0 "Lithuanian"
- czecho_slovak_culture_group:0 "Czecho-Slovak"
- czech:0 "Czech"
- slovak:0 "Slovak"
- east_slavic_culture_group:0 "East Slavic"
- russian:0 "Russian"
- byelorussian:0 "Ruthenian"
- ukrainian:0 "Ruthenian"
- ugrian:0 "Ugrian"
- baltic_culture_group:0 "Baltic"
- latvian:0 "Latvian"
- estonian:0 "Estonian"
- levantine_culture_group:0 "Levantine"
- greek:0 "Romaíoi"
- georgian:0 "Georgian"
- armenian:0 "Armenian"
- sephardic:0 "Sephardim"
- turko_semitic_culture_group:0 "Turko-Semitic"
- turkish:0 "Turkish"
- azerbaijani:0 "Turko-Persian"
- north_caucasian:0 "North Caucasian"
- arab_culture_group:0 "Arab"
- maghrebi:0 "Maghrebi"
- misri:0 "Misri"
- mashriqi:0 "Mashriqi"
- muskogean:0 "Muskogean"
- bedouin:0 "Arab"
- berber:1 "Amazigh"
- iranian_turanian_culture_group:0 "Iranian-Turanian"
- persian:0 "Persian"
- uzbek:0 "Uzbek"
- kazak:0 "Kazakh"
- kirgiz:0 "Kyrgyz"
- tajik:0 "Tajik"
- uighur:0 "Uighur"
- pashtun:0 "Pashtun"
- baluchi:0 "Baluchi"
- hazara:0 "Hazara"
- turkmen:0 "Turkmen"
- kurdish:0 "Kurdish"
- tatar:0 "Tatar"
- central_asian_culture_group:0 "Central Asian"
- mongol:0 "Mongol"
- siberian:0 "Siberian"
- yakut:0 "Yakut"
- tibetan:0 "Tibetan"
- south_asian_culture_group:0 "South Asian"
- assamese:0 "Assamese"
- bengali:0 "Bengali"
- bihari:0 "Bihari"
- manipuri:0 "Manipuri"
- nepali:0 "Nepali"
- oriya:0 "Oriya"
- sinhala:0 "Sinhala"
- avadhi:0 "Avadhi"
- kanauji:0 "Kanauji"
- panjabi:0 "Panjabi"
- kashmiri:0 "Kashmiri"
- gujarati:0 "Gujarati"
- marathi:0 "Marathi"
- sindi:0 "Sindi"
- rajput:0 "Rajput"
- kannada:0 "Kannada"
- malayalam:0 "Malayalam"
- tamil:0 "Tamil"
- telegu:0 "Telegu"
- southeast_asian_culture_group:0 "Southeast Asian"
- vietnamese:0 "Vietnamese"
- khmer:0 "Khmer"
- malay:0 "Malay"
- dayak:0 "Dayak"
- malagasy:0 "Malagasy"
- filipino:0 "Marēshian"
- javan:0 "Javan"
- moluccan:0 "Moluccan"
- thai:0 "Thai"
- lao:0 "Lao"
- shan:0 "Shan"
- burmese:0 "Burmese"
- asian_minor:0 "Asian Minor"
- kachin:0 "Kachin"
- karen:0 "Karen"
- east_asian_culture_group:0 "East Asian"
- japanese:0 "Japanese"
- manchu:0 "Manchu"
- han:0 "Han"
- beifaren:0 "Beifaren"
- nanfaren:0 "Nanfaren"
- korean:0 "Korean"
- ainu:0 "Ainu"
- hakka:0 "Hakka"
- miao:0 "Miao"
- min:0 "Min"
- zhuang:0 "Zhuang"
- yi:0 "Yi"
- yue:0 "Yue"
- oceanic_culture_group:0 "Oceanic"
- polynesian:0 "Polynesian"
- hawaiian:0 "Hawaiian"
- melanesian:0 "Melanesian"
- micronesian:0 "Micronesian"
- maori:0 "Māori"
- aborigine:1 "Aboriginal"
- native_north_american_culture_group:0 "Native North American"
- native_mesoamerican_culture_group:0 "Mesoamerican"
- zapotec:0 "Zapotec"
- mayan:0 "Maya"
- nahua:0 "Nahua"
- tarascan:0 "Tarascan"
- dakota:0 "Dakota"
- cherokee:0 "Cherokee"
- pueblo:0 "Pueblo"
- inuit:0 "Inuit"
- cree:0 "Cree"
- navajo:0 "Navajo"
- comanche:0 "Comanche"
- athabaskan:0 "Athabaskan"
- salish:0 "Salish"
- nez_perce:0 "Nez Perce"
- siouan:0 "Siouan"
- algonquian:0 "Algonquian"
- caddoan:0 "Caddoan"
- paiute:0 "Paiute"
- hokan:0 "Hokan"
- apache:0 "Apache"
- oodham:0 "O'odham"
- mixtec:0 "Mixtec"
- muisca:0 "Muisca"
- miskito:0 "Miskito"
- cariban:0 "Cariban"
- native_south_american_culture_group:0 "Native South American"
- quechua:0 "Quechua"
- guarani:0 "Guarani"
- aimara:0 "Aimara"
- amazonian:0 "Amazonian"
- patagonian:0 "Patagonian"
- guajiro:0 "Guajiro"
- tupinamba:0 "Tupinamba"
- metis:0 "Métis"
- native_american_minor:0 "Native American Minor"
- american_culture_group:0 "American"
- yankee:0 "American"
- dixie:0 "Dixie"
- latin_american_culture_group:0 "Latin American"
- mexican:0 "Mexican"
- central_american:0 "Central American"
- caribeno:0 "Caribeño"
- north_andean:0 "Granadian"
- south_andean:0 "South Andean"
- platinean:0 "Platinean"
- brazilian:0 "Brazilian"
- african_diaspora_culture_group:0 "African Diaspora"
- afro_american:0 "Afro-American"
- afro_caribbean:0 "Afro-Caribbean"
- afro_caribeno:0 "Afro-Caribeño"
- afro_brazilian:0 "Afro-Brazilian"
- afro_antillean:0 "Afro-Antillean"
- west_african_culture_group:0 "West African"
- akan:0 "Akan"
- bambara:0 "Bambara"
- bassa:0 "Bassa"
- batak:0 "Batak"
- dyula:0 "Dyula"
- edo:0 "Edo"
- ewe:0 "Ewe"
- fon:0 "Fon"
- fulbe:0 "Fulbe"
- haratin:0 "Haratin"
- hausa:0 "Hausa"
- ibibio:0 "Ibibio"
- ibo:0 "Ibo"
- khmu:0 "Khmu"
- kissi:0 "Kissi"
- kru:0 "Kru"
- mande:0 "Mande"
- maures:0 "Maures"
- mossi:0 "Mossi"
- senufo:0 "Senufo"
- songhai:0 "Songhai"
- tiv:0 "Tiv"
- tuareg:0 "Tuareg"
- wolof:0 "Wolof"
- yoruba:0 "Yoruba"
- central_african_culture_group:0 "Central African"
- bakongo:0 "Bakongo"
- baguirmi:0 "Baguirmi"
- equatorial_bantu:0 "Equatorial Bantu"
- fang:0 "Fang"
- fluvian_bantu:1 "Fluvial Bantu"
- kanuri:0 "Kanuri"
- luba:0 "Luba"
- lunda:0 "Lunda"
- mon:0 "Mon"
- mongo:0 "Mongo"
- sara:0 "Sara"
- teda:0 "Teda"
- african_minor:0 "African Minor"
- east_african_culture_group:0 "East African"
- amhara:0 "Amhara"
- afar:0 "Afar"
- azande:0 "Azande"
- baganda:0 "Baganda"
- beja:0 "Beja"
- dinka:0 "Dinka"
- fur:0 "Fur"
- kikuyu:0 "Kikuyu"
- lacustrine_bantu:0 "Lacustrine Bantu"
- luo:0 "Luo"
- maasai:0 "Maasai"
- nilotic:0 "Nilotic"
- nuer:0 "Nuer"
- nuba:0 "Nuba"
- oromo:0 "Oromo"
- ruanda:0 "Ruanda"
- rundi:0 "Rundi"
- sidama:0 "Sidama"
- somali:0 "Somali"
- sudanese:0 "Nubian"
- sukuma:0 "Sukuma"
- swahili:0 "Swahili"
- tigray:0 "Tigray"
- unyamwezi:0 "Unyamwezi"
- southern_african_culture_group:0 "Southern African"
- chewa:0 "Chewa"
- herero:0 "Herero"
- kavango_bantu:0 "Kavango Bantu"
- khoisan:0 "Khoisan"
- lomwe:0 "Lomwe"
- makua:0 "Makua"
- nguni:0 "Nguni"
- ovimbundu:0 "Ovimbundu"
- sena:0 "Sena"
- shona:0 "Shona"
- sotho:0 "Sotho"
- tonga:0 "Tonga"
- tswana:0 "Tswana"
- xhosa:0 "Xhosa"
- yao:0 "Yao"
- zulu:0 "Zulu"
- franco_canadian:0 "Franco-Canadian"
- sorb:0 "Sorb"
- tuvan:0 "Tuvan"
- corsican:0 "Corsican"
- occitan:0 "Occitan"
- sumatran:0 "Sumatran"
- bornean:0 "Bornean"
- balinese:0 "Balinese"
- moro:0 "Moro"
- assyrian:0 "Assyrian"
- iroquoian:0 "Iroquoian"
- kalmyk:0 "Kalmyk"
+ german_culture_group: "German"
+ baltic_german: "Baltic"
+ bavarian: "Bavarian"
+ austrian: "Saxon"
+ saxon: "Saxon"
+ ashkenazi: "Ashkenazi"
+ beneluxian_culture_group: "Low Countries"
+ dutch: "Dutch"
+ frankish: "Frankish"
+ wallonian: "Wallonian"
+ boer: "Boer"
+ swiss_culture_group: "Swiss"
+ swiss: "Swiss"
+ scandinavian_culture_group: "Scandinavian"
+ swedish: "Swedish"
+ danish: "Dane"
+ norwegian: "Norwegian"
+ icelandic: "Icelandic"
+ finnish: "Finnish"
+ sami: "Sámi"
+ british_culture_group: "British"
+ british: "Anglo-Saxon"
+ irish: "Irish"
+ welsh: "Welsh"
+ scottish: "Scottish"
+ australian: "Australian"
+ anglo_canadian: "Anglo-Canadian"
+ italian_culture_group: "Italian"
+ north_italian: "North Italian"
+ south_italian: "South Italian"
+ maltese: "Maltese"
+ iberian_culture_group: "Iberian"
+ basque: "Basque"
+ spanish: "Spanish"
+ catalan: "Catalan"
+ portuguese: "Portuguese"
+ galician: "Galician"
+ french_culture_group: "French"
+ french: "French"
+ french_canadian: "French Canadian"
+ breton: "Breton"
+ south_slavic_culture_group: "South Slavic"
+ croat: "Croatian"
+ serb: "Serbian"
+ bulgarian: "Boulgaroí"
+ albanian: "Albanoí" #Arvanoi Albanoi Boulgaroí
+ slovene: "Slovene"
+ bosniak: "Bosniak"
+ romanian_culture_group: "Romanian"
+ romanian: "Vlach"
+ hungarian_culture_group: "Hungarian"
+ hungarian: "Hungarian"
+ polish_culture_group: "Polish"
+ polish: "Polish"
+ lithuanian: "Lithuanian"
+ czecho_slovak_culture_group: "Czecho-Slovak"
+ czech: "Czech"
+ slovak: "Slovak"
+ east_slavic_culture_group: "East Slavic"
+ russian: "Russian"
+ byelorussian: "Ruthenian"
+ ukrainian: "Ruthenian"
+ ugrian: "Ugrian"
+ baltic_culture_group: "Baltic"
+ latvian: "Latvian"
+ estonian: "Estonian"
+ levantine_culture_group: "Levantine"
+ greek: "Romaíoi"
+ georgian: "Georgian"
+ armenian: "Armenian"
+ sephardic: "Sephardim"
+ turko_semitic_culture_group: "Turko-Semitic"
+ turkish: "Turkish"
+ azerbaijani: "Turko-Persian"
+ north_caucasian: "North Caucasian"
+ arab_culture_group: "Arab"
+ maghrebi: "Maghrebi"
+ misri: "Misri"
+ mashriqi: "Mashriqi"
+ muskogean: "Muskogean"
+ bedouin: "Arab"
+ berber: "Amazigh"
+ iranian_turanian_culture_group: "Iranian-Turanian"
+ persian: "Persian"
+ uzbek: "Uzbek"
+ kazak: "Kazakh"
+ kirgiz: "Kyrgyz"
+ tajik: "Tajik"
+ uighur: "Uighur"
+ pashtun: "Pashtun"
+ baluchi: "Baluchi"
+ hazara: "Hazara"
+ turkmen: "Turkmen"
+ kurdish: "Kurdish"
+ tatar: "Tatar"
+ central_asian_culture_group: "Central Asian"
+ mongol: "Mongol"
+ siberian: "Siberian"
+ yakut: "Yakut"
+ tibetan: "Tibetan"
+ south_asian_culture_group: "South Asian"
+ assamese: "Assamese"
+ bengali: "Bengali"
+ bihari: "Bihari"
+ manipuri: "Manipuri"
+ nepali: "Nepali"
+ oriya: "Oriya"
+ sinhala: "Sinhala"
+ avadhi: "Avadhi"
+ kanauji: "Kanauji"
+ panjabi: "Panjabi"
+ kashmiri: "Kashmiri"
+ gujarati: "Gujarati"
+ marathi: "Marathi"
+ sindi: "Sindi"
+ rajput: "Rajput"
+ kannada: "Kannada"
+ malayalam: "Malayalam"
+ tamil: "Tamil"
+ telegu: "Telegu"
+ southeast_asian_culture_group: "Southeast Asian"
+ vietnamese: "Vietnamese"
+ khmer: "Khmer"
+ malay: "Malay"
+ dayak: "Dayak"
+ malagasy: "Malagasy"
+ filipino: "Marēshian"
+ javan: "Javan"
+ moluccan: "Moluccan"
+ thai: "Thai"
+ lao: "Lao"
+ shan: "Shan"
+ burmese: "Burmese"
+ asian_minor: "Asian Minor"
+ kachin: "Kachin"
+ karen: "Karen"
+ east_asian_culture_group: "East Asian"
+ japanese: "Japanese"
+ manchu: "Manchu"
+ han: "Han"
+ beifaren: "Beifaren"
+ nanfaren: "Nanfaren"
+ korean: "Korean"
+ ainu: "Ainu"
+ hakka: "Hakka"
+ miao: "Miao"
+ min: "Min"
+ zhuang: "Zhuang"
+ yi: "Yi"
+ yue: "Yue"
+ oceanic_culture_group: "Oceanic"
+ polynesian: "Polynesian"
+ hawaiian: "Hawaiian"
+ melanesian: "Melanesian"
+ micronesian: "Micronesian"
+ maori: "Māori"
+ aborigine: "Aboriginal"
+ native_north_american_culture_group: "Native North American"
+ native_mesoamerican_culture_group: "Mesoamerican"
+ zapotec: "Zapotec"
+ mayan: "Maya"
+ nahua: "Nahua"
+ tarascan: "Tarascan"
+ dakota: "Dakota"
+ cherokee: "Cherokee"
+ pueblo: "Pueblo"
+ inuit: "Inuit"
+ cree: "Cree"
+ navajo: "Navajo"
+ comanche: "Comanche"
+ athabaskan: "Athabaskan"
+ salish: "Salish"
+ nez_perce: "Nez Perce"
+ siouan: "Siouan"
+ algonquian: "Algonquian"
+ caddoan: "Caddoan"
+ paiute: "Paiute"
+ hokan: "Hokan"
+ apache: "Apache"
+ oodham: "O'odham"
+ mixtec: "Mixtec"
+ muisca: "Muisca"
+ miskito: "Miskito"
+ cariban: "Cariban"
+ native_south_american_culture_group: "Native South American"
+ quechua: "Quechua"
+ guarani: "Guarani"
+ aimara: "Aimara"
+ amazonian: "Amazonian"
+ patagonian: "Patagonian"
+ guajiro: "Guajiro"
+ tupinamba: "Tupinamba"
+ metis: "Métis"
+ native_american_minor: "Native American Minor"
+ american_culture_group: "American"
+ yankee: "American"
+ dixie: "Dixie"
+ latin_american_culture_group: "Latin American"
+ mexican: "Mexican"
+ central_american: "Central American"
+ caribeno: "Caribeño"
+ north_andean: "Granadian"
+ south_andean: "South Andean"
+ platinean: "Platinean"
+ brazilian: "Brazilian"
+ african_diaspora_culture_group: "African Diaspora"
+ afro_american: "Afro-American"
+ afro_caribbean: "Afro-Caribbean"
+ afro_caribeno: "Afro-Caribeño"
+ afro_brazilian: "Afro-Brazilian"
+ afro_antillean: "Afro-Antillean"
+ west_african_culture_group: "West African"
+ akan: "Akan"
+ bambara: "Bambara"
+ bassa: "Bassa"
+ batak: "Batak"
+ dyula: "Dyula"
+ edo: "Edo"
+ ewe: "Ewe"
+ fon: "Fon"
+ fulbe: "Fulbe"
+ haratin: "Haratin"
+ hausa: "Hausa"
+ ibibio: "Ibibio"
+ ibo: "Ibo"
+ khmu: "Khmu"
+ kissi: "Kissi"
+ kru: "Kru"
+ mande: "Mande"
+ maures: "Maures"
+ mossi: "Mossi"
+ senufo: "Senufo"
+ songhai: "Songhai"
+ tiv: "Tiv"
+ tuareg: "Tuareg"
+ wolof: "Wolof"
+ yoruba: "Yoruba"
+ central_african_culture_group: "Central African"
+ bakongo: "Bakongo"
+ baguirmi: "Baguirmi"
+ equatorial_bantu: "Equatorial Bantu"
+ fang: "Fang"
+ fluvian_bantu: "Fluvial Bantu"
+ kanuri: "Kanuri"
+ luba: "Luba"
+ lunda: "Lunda"
+ mon: "Mon"
+ mongo: "Mongo"
+ sara: "Sara"
+ teda: "Teda"
+ african_minor: "African Minor"
+ east_african_culture_group: "East African"
+ amhara: "Amhara"
+ afar: "Afar"
+ azande: "Azande"
+ baganda: "Baganda"
+ beja: "Beja"
+ dinka: "Dinka"
+ fur: "Fur"
+ kikuyu: "Kikuyu"
+ lacustrine_bantu: "Lacustrine Bantu"
+ luo: "Luo"
+ maasai: "Maasai"
+ nilotic: "Nilotic"
+ nuer: "Nuer"
+ nuba: "Nuba"
+ oromo: "Oromo"
+ ruanda: "Ruanda"
+ rundi: "Rundi"
+ sidama: "Sidama"
+ somali: "Somali"
+ sudanese: "Nubian"
+ sukuma: "Sukuma"
+ swahili: "Swahili"
+ tigray: "Tigray"
+ unyamwezi: "Unyamwezi"
+ southern_african_culture_group: "Southern African"
+ chewa: "Chewa"
+ herero: "Herero"
+ kavango_bantu: "Kavango Bantu"
+ khoisan: "Khoisan"
+ lomwe: "Lomwe"
+ makua: "Makua"
+ nguni: "Nguni"
+ ovimbundu: "Ovimbundu"
+ sena: "Sena"
+ shona: "Shona"
+ sotho: "Sotho"
+ tonga: "Tonga"
+ tswana: "Tswana"
+ xhosa: "Xhosa"
+ yao: "Yao"
+ zulu: "Zulu"
+ franco_canadian: "Franco-Canadian"
+ sorb: "Sorb"
+ tuvan: "Tuvan"
+ corsican: "Corsican"
+ occitan: "Occitan"
+ sumatran: "Sumatran"
+ bornean: "Bornean"
+ balinese: "Balinese"
+ moro: "Moro"
+ assyrian: "Assyrian"
+ iroquoian: "Iroquoian"
+ kalmyk: "Kalmyk"
