fix: escape `"` in `br_addon_content_l_english.yml`
Commit 7909d03c389d4e1a6341eb065840e805cce12a7a
moved some files around and broke the github
action workflow.

This commit escapes `"` to ensure that the file
contains valid `YAML`.

--- a/localization/english/br_addon_content_l_english.yml
+++ b/localization/english/br_addon_content_l_english.yml
@@ -114,12 +114,12 @@
 
  ib_events.01.t: "Primary Culture Change"
  ib_events.01.d: "The proud [ROOT.GetCountry.GetName] has successfully completed the primary culture change for [SCOPE.sCountry('culture_target_country').GetName]. [SCOPE.sCountry('culture_target_country').GetName] will now prosper forever, embracing the culture of the homeland."
- ib_events.01.f: ""Hail [ROOT.GetCountry.GetName]!""
+ ib_events.01.f: "\"Hail [ROOT.GetCountry.GetName]!\""
  ib_events.01.a: "Well done."
 
  ib_events.02.t: "Grant Autonomy"
  ib_events.02.d: "The proud [ROOT.GetCountry.GetName] has successfully completed the autonomy grant for [SCOPE.sCountry('autonomy_target_country').GetName]. [SCOPE.sCountry('autonomy_target_country').GetName] will now thrive forever under the indirect rule of the homeland."
- ib_events.02.f: ""Hail [ROOT.GetCountry.GetName]!""
+ ib_events.02.f: "\"Hail [ROOT.GetCountry.GetName]!\""
  ib_events.02.a: "Well done."
 
  increase_autonomy_monthly_effect: "Complete autonomy grant with a 5% chance each month."
