fix: conform to `YAML` standard
This commit deletes `:0`, `:1`, etc from
`br_misc_l_english.yml`

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -60,7 +60,7 @@
 
 
  ideology_romaioi_anti_clerical: "Secularist"
- ideology_romaioi_anti_clerical_desc:1 "#lore This group opposes the influence of organized religion on the political and education system. They believe that rational minds should be at the forefront of governance.#!"
+ ideology_romaioi_anti_clerical_desc: "#lore This group opposes the influence of organized religion on the political and education system. They believe that rational minds should be at the forefront of governance.#!"
  ideology_romaioi_republican: "Scholar-Gentry"
  ideology_romaioi_republican_desc: "#lore This group would prefer to see the Basileus advised by the wise and educated.#!"
  ideology_romaioi_liberal: "Liberal"
