fix: escape `"` in `br_misc_l_english.yml`
This is needed to be `YAML` compliant.

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -67,7 +67,7 @@
  ideology_romaioi_liberal_desc: "#lore This group believes it is the duty of the Basileus to inshrine liberty and legal equality as important values to be safeguarded.#!"
 
  ideology_sarmatism_paternalistic: "Sarmatism"
- ideology_sarmatism_paternalistic_desc: "Sarmatism (or Sarmatianism; Polish: Sarmatyzm; Lithuanian: Sarmatizmas) is an ethno-cultural ideology within the Polish–Lithuanian Commonwealth. It is the dominant Baroque culture and ideology of the nobility (szlachta). Together with the concept of "Golden Liberty", it formed a central aspect of the Commonwealth's culture and society. At its core is the unifying belief that the people of the Polish–Lithuanian Commonwealth descended from the ancient Iranian Sarmatians, the legendary invaders of contemporary Polish lands in antiquity"
+ ideology_sarmatism_paternalistic_desc: "Sarmatism (or Sarmatianism; Polish: Sarmatyzm; Lithuanian: Sarmatizmas) is an ethno-cultural ideology within the Polish–Lithuanian Commonwealth. It is the dominant Baroque culture and ideology of the nobility (szlachta). Together with the concept of \"Golden Liberty\", it formed a central aspect of the Commonwealth's culture and society. At its core is the unifying belief that the people of the Polish–Lithuanian Commonwealth descended from the ancient Iranian Sarmatians, the legendary invaders of contemporary Polish lands in antiquity"
  ideology_polonization: "Polonization"
  ideology_polonization_desc: "Polonization could be either voluntary or forced. It is most visible in territories where the Polish language or culture is dominant or where their adoption could result in increased prestige or social status, as is the case with the nobilities of Ruthenia and Lithuania."
  ideology_cossacks: "Cossacks"
@@ -186,7 +186,7 @@
  default_building_spices_plantation: "Basic Production"
 
  decree_romanisation: "Romanization."
- decree_romanisation_desc: "Begin efforts to "Romanize" this province."
+ decree_romanisation_desc: "Begin efforts to \"Romanize\" this province."
 
  #Goods
 
