fix: add missing `"` to `br_names_l_english.yml`

--- a/localization/english/br_names_l_english.yml
+++ b/localization/english/br_names_l_english.yml
@@ -161,7 +161,7 @@
 
 Yaotl: "Yāotl"
 Matlalihuitl: "Matlalihuitl"
-Nochehuatl: "Nochēhuatl
+Nochehuatl: "Nochēhuatl"
 Coatl: "Coātl"
 Tototl: "Tototl"
 Cuauhtl: "Cuāuhtl"
